--- a/_includes/workshop_ad.html
+++ b/_includes/workshop_ad.html
@@ -2,47 +2,79 @@
   Advertising box at the top of a workshop website home page.
 {% endcomment %}
 
-{% assign begin_address = page.address | slice: 0, 4 | downcase  %}
-{% if page.address == "online" %}
-{% assign online = "true_private" %}
-{% elsif begin_address contains "http" %}
-{% assign online = "true_public" %}
-{% else %}
-{% assign online = "false" %}
-{% endif %}
+<style>
+  .button {
+    border:  black;
+    color: none;
+    padding: 16px 64px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 24px;
+    margin: 4px 80px;
+    border-radius: 25px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    position:absolute;
+    right:0;
+  }
+  
+  .button1 {
+    background-color: transparent; 
+    color: black;
+    border: 8px solid #0975ab;
+  }
+  
+  .button1:hover {
+    background-color: #0975ab;
+    color: white;
+  }
 
-<div class="jumbotron">
+  .button1:after {
+    content: "Sign-up";
+  }
+  
+  .button1:hover:after {
+    content: "Closed";
+  }
+</style>
+
+<div class="jumbotron" style="background-image: url(./fig/HeaderPict3.jpg); background-size: cover">
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
-      {% unless site.title == "Workshop Title" or site.title == "" %}
-      <h1>{{site.title}}</h1>
-      {% endunless %}
+      <h1>{{page.title}}</h1>
+      <br>
       <h2>{{page.venue}}</h2>
+      <br>
       <div class="row">
-        <div class="col-md-6">
-          {% if online == "true_public" %}
-          <p>Online (<a href="{{page.address}}">link</a>)</p>
-          {% elsif online == "true_private" %}
-          <p>Online</p>
-          {% endif %}
-          <p>{{page.humandate}}</p>
-          <p>{% if page.humantime %}{{page.humantime}}{% endif %}</p>
+        <div class="col-md-5">
+          <p><strong>{{page.humandate}}</strong></p>
+          <p><strong>{% if page.humantime %}{{page.humantime}}{% endif %}</strong></p>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-7">
           <p>
           <strong>Instructors:</strong>
           {% if page.instructor %}
-          {{page.instructor | join: ', ' %}}
+          <strong>{{page.instructor | join: ', ' %}}</strong>
           {% else %}
           to be announced.
           {% endif %}
           </p>
-          {% if page.helper %}
           <p>
           <strong>Helpers:</strong>
-          {{page.helper | join: ', ' %}}
-          </p>
+          {% if page.helper %}
+          <strong>{{page.helper | join: ', ' %}}</strong>
+          {% else %}
+          <strong>to be announced.</strong>
           {% endif %}
+          </p>
+          <br>
+          <br>
+          <p>
+            <strong><button class="button button1"; onclick="window.location.href = 'https://www.eventbrite.fr/e/introduction-to-rna-seq-workshop-tickets-157456636037';"></button></strong>
+          <br>
+          <br>
+          </p>
         </div>
       </div>
     </div>
