added link to enroll

--- a/_includes/workshop_ad.html
+++ b/_includes/workshop_ad.html
@@ -35,7 +35,7 @@
   }
   
   .button1:hover:after {
-    content: "Closed";
+    content: "Click me";
   }
 </style>
 
@@ -71,7 +71,7 @@
           <br>
           <br>
           <p>
-            <strong><button class="button button1"; onclick="window.location.href = 'https://www.eventbrite.fr/e/introduction-to-rna-seq-workshop-tickets-157456636037';"></button></strong>
+            <strong><button class="button button1"; onclick="window.location.href = 'https://uba.uva.nl/en/content/events/courses/2022/04/introduction-to-data-analysis-and-data-visualization-with-python.html';"></button></strong>
           <br>
           <br>
           </p>
