add helpers to websites

--- a/_includes/dc/intro2.html
+++ b/_includes/dc/intro2.html
@@ -1,11 +1,11 @@
 <p>
-This workshop is organized by the core members of the <a href="https://www.scienceparkstudygroup.info/">Amsterdam Science Park Study Group</a>. This small community of computational biologists aims to promote skill sharing and collaboration through the organisation of interactive workshops.  It acts as the main local hub to set-up Software and Data Carpentry workshops (official workshops and Carpentry-style). All are welcome to this study group, regardless of scientific research area, affiliation or training level.
+This workshop is organized by the board members of the <a href="https://www.scienceparkstudygroup.info/">Amsterdam Science Park Study Group</a> in collaboration with the <a href="https://dsc.uva.nl/people/people.html">University of Amsterdam Data Science Center</a>. These two communities aim to promote skill sharing and collaboration through the organisation of interactive workshops in scientific programming. They act as the main local hubs to set-up Software and Data Carpentry workshops (official workshops and Carpentry-style). All are welcome, regardless of scientific research area, affiliation or training level.
 </p>
 <p align="center">
   <em>
     For more information on what we teach and why,
-    see our website: 
-    "<a href="https://www.scienceparkstudygroup.info">scienceparkstudygroup</a>".
+    see our websites: 
+    <a href="https://www.scienceparkstudygroup.info">Science Park Study Group</a> and <a href="https://dsc.uva.nl/">Data Science Center</a>.
   </em>
 </p>
 <p>
