--- a/_includes/dc/intro3.html
+++ b/_includes/dc/intro3.html
@@ -3,8 +3,8 @@
 <br>
 Python is a general purpose programming language that is useful for writing scripts to work effectively and reproducibly with data.
 
-This is an introduction to Python designed for participants with no programming experience. These lessons can be taught in one and a half days (~ 10 hours). They start with some basic information about Python syntax, the Jupyter notebook interface, and move through how to import CSV files, using the pandas package to work with data frames, how to calculate summary information from a data frame, and a brief introduction to plotting. The last lesson demonstrates how to work with databases directly from Python.<br>
-This workshop is organised by the <a href="https://www.scienceparkstudygroup.info/">Amsterdam Science Park Study Group</a>. 
+This is an introduction to Python designed for participants with no programming experience. These lessons can be taught in one and a half days (~ 10 hours). They start with some basic information about Python syntax, the Jupyter notebook interface, and move through how to import CSV files, using the pandas package to work with data frames, how to calculate summary information from a data frame, and a brief introduction to plotting. The last lesson demonstrates how to work with databases directly from Python.
+This workshop is organised by Tijs Bliek and Marc Galland (members of the <a href="https://www.scienceparkstudygroup.info/">Amsterdam Science Park Study Group</a>), Iris van der Knaap (<a href="https://dsc.uva.nl/people/people.html">Data Science Center, University of Amsterdam</a>) and Sam Nooij (<a href="https://www.lumc.nl/?setlanguage=English">Leiden University Medical Center</a>). 
 
 <br>
 <br>
