--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -3,7 +3,7 @@ Ecology workshop
 -->
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1 April 21</h3>
+    <h3>Day 1 (Thursday 21 April)</h3>
     <table class="table table-striped">
       <tr>
 	<td>Morning<br>(9:30-11:00)</td> 
@@ -40,7 +40,7 @@ Ecology workshop
   </div>
 
     <div class="col-md-6">
-    <h3>Day 2 April 22</h3>
+    <h3>Day 2 (Friday April 22)</h3>
     <table class="table table-striped">
       <tr>
         <td> Morning<br>(9:30-11:00)</td>
