modified title and description

--- a/_includes/dc/intro2.html
+++ b/_includes/dc/intro2.html
@@ -1,5 +1,5 @@
 <p>
-This workshop is organized by the board members of the <a href="https://www.scienceparkstudygroup.info/">Amsterdam Science Park Study Group</a> in collaboration with the <a href="https://dsc.uva.nl/people/people.html">University of Amsterdam Data Science Center</a>. These two communities aim to promote skill sharing and collaboration through the organisation of interactive workshops in scientific programming. They act as the main local hubs to set-up Software and Data Carpentry workshops (official workshops and Carpentry-style). All are welcome, regardless of scientific research area, affiliation or training level.
+This workshop is organized by the <a href="https://uba.uva.nl/en/home">Data Science Center (part of the UvA of Amsterdam Library)</a> and by members of the <a href="https://www.scienceparkstudygroup.info/">Amsterdam Science Park Study Group</a>. These two communities aim to promote skill sharing and collaboration through the organisation of interactive workshops in scientific programming. They act as the main local hubs to set-up Software and Data Carpentry workshops (official workshops and Carpentry-style). All are welcome, regardless of scientific research area, affiliation or training level.
 </p>
 <p align="center">
   <em>
@@ -13,7 +13,5 @@ This workshop is organized by the board members of the <a href="https://www.scie
 <br>
 <br>
 </p>
-
-
 
 
