--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -7,14 +7,14 @@ Ecology workshop
     <table class="table table-striped">
       <tr>
 	<td>Morning<br>(9:30-11:00)</td> 
-	<td> Data Organization in Spreadsheets for Ecologists<br>(Sam)</td></tr>
+	<td> <a href="https://datacarpentry.org/spreadsheet-ecology-lesson/">Data Organization in Spreadsheets for Ecologists</a> (Sam)</td></tr>
      <tr>
         <td> Coffee  </td>
         <td>  </td>
       </tr>
       <tr>
 	<td>Morning<br>(11:15-12:45)</td> 
-	<td> Data Analysis and Visualization in Python.<br> Short Introduction to Programming in Python (Sam)</td>
+	<td> Data Analysis and Visualization in Python.<br> <a href="https://datacarpentry.org/python-ecology-lesson/01-short-introduction-to-Python/index.html">Short Introduction to Programming in Python</a> (Sam)</td>
       </tr>
       <tr>
         <td>Lunch<br></td>
@@ -22,7 +22,7 @@ Ecology workshop
       </tr>
       <tr>
         <td>Afternoon<br>(13:45-15:15)</td> 
-        <td>Data Analysis and Visualization in Python.<br>Starting With Data  (Tijs)<br></td>
+        <td>Data Analysis and Visualization in Python.<br><a href="https://datacarpentry.org/python-ecology-lesson/02-starting-with-data/index.html">Starting with Data</a> (Tijs)<br></td>
         <td>  </td>
       </tr>
       <tr>
@@ -31,7 +31,7 @@ Ecology workshop
       </tr>
       <tr>
         <td>Afternoon<br>(15:30-17:00)</td> 
-        <td>Data Analysis and Visualization in Python.<br>Data Types and Formats  (Tijs)<br></td>
+        <td>Data Analysis and Visualization in Python.<br><a href="https://datacarpentry.org/python-ecology-lesson/04-data-types-and-format/index.html">Data Types and Formats</a> (Tijs)<br></td>
         <td> </td>
         </tr>
 
@@ -44,7 +44,7 @@ Ecology workshop
     <table class="table table-striped">
       <tr>
         <td> Morning<br>(9:30-11:00)</td>
-        <td>Data Analysis and Visualization in Python.<br>Data Workflows and Automation.  (tba)</td>
+        <td>Data Analysis and Visualization in Python.<br><a href="https://datacarpentry.org/python-ecology-lesson/06-loops-and-functions/index.html">Data Workflows and Automation</a> (Marc)</td>
       </tr>  
       <tr>
         <td> Coffee</td>
@@ -52,7 +52,7 @@ Ecology workshop
       </tr>
       <tr>
         <td> Morning<br>(11:15-12:45)</td>
-        <td>Data Analysis and Visualization in Python.<br>Making Plots With plotnine.  (tba)</td> 
+        <td>Data Analysis and Visualization in Python.<br><a href="https://datacarpentry.org/python-ecology-lesson/07-visualization-ggplot-python/index.html">Making Plots With plotnine</a> (Marc)</td> 
       </tr>
       <tr>
         <td> Lunch </td>
@@ -60,7 +60,7 @@ Ecology workshop
       </tr>
       <tr> 
         <td>Afternoon<br>(13:45-15:15)</td>
-        <td>Data Analysis and Visualization in Python.<br>Data Ingest and Visualization.  (tba)</td>
+        <td>Data Analysis and Visualization in Python.<br><a href="https://datacarpentry.org/python-ecology-lesson/08-putting-it-all-together/index.html">Data Ingest and Visualization</a> (Marc, Tijs, Sam)</td>
       </tr>
       <tr>
         <td> Tea </td>
@@ -68,7 +68,7 @@ Ecology workshop
       </tr>
       <tr>
         <td>Afternoon<br>(15:30-17:00)</td>
-        <td> Data Analysis and Visualization in Python.<br>Accessing SQLite Databases Using Python and Pandas.  (tba)</td>
+        <td> Data Analysis and Visualization in Python.<br><a href="https://datacarpentry.org/python-ecology-lesson/09-working-with-sql/index.html">Accessing SQLite Databases Using Python and Pandas</a> (tba)</td>
       </tr>
     </table>
   </div>
