add teachers on Friday

--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -60,7 +60,7 @@ Ecology workshop
       </tr>
       <tr> 
         <td>Afternoon<br>(13:45-15:15)</td>
-        <td>Data Analysis and Visualization in Python.<br><a href="https://datacarpentry.org/python-ecology-lesson/08-putting-it-all-together/index.html">Data Ingest and Visualization</a> (Marc, Tijs, Sam)</td>
+        <td>Data Analysis and Visualization in Python.<br><a href="https://datacarpentry.org/python-ecology-lesson/08-putting-it-all-together/index.html">Data Ingest and Visualization</a> (Tijs)</td>
       </tr>
       <tr>
         <td> Tea </td>
@@ -68,7 +68,7 @@ Ecology workshop
       </tr>
       <tr>
         <td>Afternoon<br>(15:30-17:00)</td>
-        <td> Data Analysis and Visualization in Python.<br><a href="https://datacarpentry.org/python-ecology-lesson/09-working-with-sql/index.html">Accessing SQLite Databases Using Python and Pandas</a> (tba)</td>
+        <td> Data Analysis and Visualization in Python.<br><a href="https://datacarpentry.org/python-ecology-lesson/09-working-with-sql/index.html">Accessing SQLite Databases Using Python and Pandas</a> (Marc)</td>
       </tr>
     </table>
   </div>
